--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ footer{
 
 /* Chat area */
 #chat-body{
+   
     height:350px;
     overflow-y:auto;
     background:#F1FDFB;
@@ -126,6 +127,8 @@ footer{
 
 /* Messages */
 .bot{
+    
+    
     background:#e0f2f1;
     padding:12px;
     margin-bottom:10px;
@@ -141,9 +144,16 @@ footer{
     margin-bottom:10px;
     border-radius:10px;
     max-width:75%;
+    margin-right:0;
     margin-left:auto;
+
     text-align:right;
     font-size:14px;
+     
+     white-space: normal;
+    overflow-wrap:anywhere;
+    display:inline-block;
+    word-break: break-all;
 }
 
 /* Input section */
